--- a/alexandria/package.json
+++ b/alexandria/package.json
@@ -11,13 +11,15 @@
   },
   "license": "MIT",
   "dependencies": {
-    "solid-js": "^1.7.8",
-    "@tauri-apps/api": "^1.4.0"
+    "@tauri-apps/api": "^1.4.0",
+    "@zag-js/solid": "^0.16.0",
+    "@zag-js/toggle": "^0.16.0",
+    "solid-js": "^1.7.8"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.4.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.4",
-    "vite-plugin-solid": "^2.7.0",
-    "@tauri-apps/cli": "^1.4.0"
+    "vite-plugin-solid": "^2.7.0"
   }
 }
