--- a/alexandria/src-tauri/Cargo.toml
+++ b/alexandria/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ tauri-build = { version = "1.4", features = [] }
 tauri = { version = "1.4", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sqlx = { version = "0.7.3", features = ["runtime-async-std", "tls-native-tls", "postgres", "time", "migrate"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
