pin rust docker image and add tauri's lib dependencies

--- a/alexandria/src-tauri/Dockerfile
+++ b/alexandria/src-tauri/Dockerfile
@@ -1,8 +1,13 @@
-FROM rust AS base
+FROM rust:1.75 AS base
 
-RUN apt-get update --yes -qq && \
-    apt-get install -qq --no-install-recommends postgresql-client && \
-    cargo install sqlx-cli --no-default-features --features native-tls,postgres
+RUN cargo install sqlx-cli --no-default-features --features native-tls,postgres
+RUN apt-get update --yes && \
+    apt-get install --yes \
+        libsoup2.4-dev \
+        javascriptcoregtk-4.0 \
+        librust-gdk-sys-dev \
+        libatk1.0-dev \
+        libwebkit2gtk-4.0-dev
 
 WORKDIR /code
 EXPOSE 8080
@@ -17,6 +22,6 @@ FROM base AS builder
 RUN cargo build --release --offline
 
 
-FROM debian:bullseye-slim AS prod
+FROM debian:buster-slim AS prod
 COPY --from=builder /code/target/release/alexandria-backend /
 CMD [ "/alexandria-backend" ]
