--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://tester:password@db:5432/testing
 POSTGRES_USER=tester
-POSTGRES_PASSWORD=password
 POSTGRES_DB=testing
+POSTGRES_PASSWORD=password
+POSTGRES_HOST=db
