--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sqlx = { version = "0.7.3", features = ["runtime-async-std", "tls-native-tls", "postgres", "time", "migrate"] }
 async-std = { version = "1.12.0", features = ["attributes"] }
+reqwest = "0.11.23"
+quick-xml = { version = "0.31.0", features = ["serialize"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
