--- a/leptos/Cargo.toml
+++ b/leptos/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 
 [dependencies]
 serde.workspace = true
+models.workspace = true
 leptos = { version = "0.5.6", features = ["csr"] }
 
 [dependencies.tauri-sys]
