--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,45 @@
+[package]
+name = "alexandria"
+version.workspace = true
+authors.workspace = true
+description.workspace = true
+edition.workspace = true
+
+[dependencies]
+serde.workspace = true
+models.workspace = true
+console_error_panic_hook = "0.1.7"
+js-sys = "0.3.69"
+leptonic = { version = "0.5.0", features = ["full", "csr"] }
+leptos = { version = "0.6.9", features = ["csr"] }
+leptos_meta = { version = "0.6.9", features = ["csr"] }
+serde-wasm-bindgen = "0.6.5"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+tracing-wasm = "0.2.1"
+wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
+wasm-bindgen-futures = "0.4.42"
+
+[package.metadata.leptonic]
+style-dir = "style"
+js-dir = "public/js"
+
 [workspace]
 resolver = "2"
-members = ["tauri", "leptos", "shared/*"]
+members = ["tauri", "shared/*"]
 
 [workspace.package]
 version = "0.0.1"
 authors = ["Tristan Schrader", "Tahoe Schrader"]
 description = "Track your media"
 edition = "2021"
-# TODO license = "GPL"
 
 [workspace.dependencies]
 serde_json = "1.0.105"
 
 [workspace.dependencies.serde]
-version = "1.0.195"
+version = "1.0.197"
 features = ["derive"]
 
 [workspace.dependencies.models]
 path = "shared/models"
-
-# TODO look into profiles!
-# [profile.release]
-# panic = "abort"
-# codegen-units = 1
-# lto = "fat"
-# opt-level = "z"
-# strip = true
-
-# [profile.dev]
-# opt-level = 0
-# codegen-units = 256
-# lto = "off"
