--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -9,7 +9,7 @@ edition.workspace = true
 tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-async-std = { version = "1.12.0", features = ["attributes"] }
+async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
 sqlx = { version = "0.7.3", features = ["runtime-async-std", "tls-native-tls", "postgres", "time", "migrate"] }
 quick-xml = { version = "0.31.0", features = ["serialize"] }
 reqwest = "0.11.23"
